data/derived/sp14/progs/unify/prog0566.ml.out
Characters 29-32:
  let fixpoint (f,b) = wwhile ((g),b);;
                               ^^^
Error: This expression has type ('a -> 'a) * 'a -> 'a * bool
       but an expression was expected of type
         ('a -> 'a) * 'a -> (('a -> 'a) * 'a) * bool
       The type variable 'a occurs inside ('a -> 'a) * 'a
